fixed white space between sections.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -36,6 +36,10 @@ a {
   color: #212529;
 }
 
+.section {
+  padding: 10px 0;
+}
+
   /* ======== HERO ======== */
 
   .hero-area:before {
@@ -203,6 +207,7 @@ a {
     background: url("/images/backgrounds/sacramento-1920.jpg");
     height: 40vh;
     background-repeat: no-repeat;
+    background-size: cover;
     background-attachment: fixed;
   }
 }
